--- a/Banco de Capacitores/dimensionBanco.html
+++ b/Banco de Capacitores/dimensionBanco.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Estilos.css">
     
 </head>
-<body>
+<body>  
     
     <div class="cajaTitulos">
         <h2 class="Tituloh1">Banco de Capacitores</h2>
@@ -41,11 +41,9 @@
     <div class="formulariocaja">
       <form>
           <div id="calculadora">
-              <p>Dimensiona tu banco con residuo de luz de CFE.</p>
+              <p>Dimensiona tu banco con recibo de luz de CFE.</p>
           </div>
-          <input type="number" placeholder="KW" id="formulario2KD" step="0.01" required>
-          <input type="number" placeholder="FP ACTUAL" id="formulario2FPA" class="formulario" step="0.01" min="0" max="1" required>
-          <input type="number" placeholder="FP DESEADO" id="formulario2FPD" class="formulario" step="0.01" min="0" max="1" required>
+          <div id="monthly-inputs"></div>
           <input type="button" onclick="calculateCFE()" value="Calcular" id="formulariobtn2">
           <h2 id="resultCFE"></h2>
           <p id="formText2">Los valores deberán introducirse en decimales. Ejemplo:</p>
