--- a/Banco de Capacitores/dimensionBanco.html
+++ b/Banco de Capacitores/dimensionBanco.html
@@ -46,12 +46,14 @@
           <div id="monthly-inputs"></div>
           <input type="button" onclick="calculateCFE()" value="Calcular" id="formulariobtn2">
           <h2 id="resultCFE"></h2>
+          <h2 id="resultPromedios"></h2>
           <p id="formText2">Los valores deberán introducirse en decimales. Ejemplo:</p>
           <p class="valoresText">KW-------------------------100</p>
           <p class="valoresText">FP ACTUAL-----------------0.69</p>
           <p class="valoresText">FP DESEADO---------------0.92</p>
       </form>
   </div>
+        <script src="calculoCFE.js"></script>
         <script src="Funciones.js"></script>
 </body>
 </html>
